# syncbox

./: Makefile  __init__.py  pyproject.toml  xmlprocessing.py
syncbox/: app.py  deezerapi.py  xmlprocessing.py
syncbox/templates/: selected.html  tree.html
tests/: test_parsing.py
tests/testxmls/: collec.xml
xml_here/: hihi.xml
