[tool.poetry]
name = "syncbox"
version = "0.0.0"
authors = ["Lindpy"]


[tool.pytest.ini_options] 
testpaths = ["tests"]      
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[project]
name = "syncbox"
version = "0.1.0"
description = "Easy Rekordbox Workflow tool"
authors = [{ name = "lindpy" }]
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.14.0",]


[tool.ruff]

lint.select = ["E", "F", "I"]
exclude = ["venv", "__pycache__", ".git"]
target-version = "py311"
line-length = 88
fix = true